# rick-for-plan

./: .env.example  .gitignore  README.md  pyproject.toml  railway.toml  render.yaml  requirements.txt
src/study_assistant/: main.py
src/study_assistant/api/: dependencies.py  routes.py
src/study_assistant/core/: config.py
src/study_assistant/db/: session.py
src/study_assistant/models/: __init__.py  entities.py
src/study_assistant/repositories/: __init__.py  assistant_repository.py
src/study_assistant/schemas/: __init__.py  contracts.py
src/study_assistant/services/: __init__.py  assistant.py  assistant_brain.py  brain_result_handler.py  button_action_handler.py  command_handler.py  context_assembler.py  decision_engine.py  due_scan_service.py  input_handler.py  internal_events.py  message_interpreter.py  openai_client.py  planning.py  proactive_message_service.py  reschedule_followup_handler.py  response_composer.py  scheduler_event_handler.py  task_executor.py  telegram.py  text_action_handler.py  time_parser.py  user_message_handler.py  weekly_report_service.py
tests/: test_assistant_brain.py  test_assistant_service.py  test_config.py  test_context_assembler.py  test_decision_engine.py  test_input_handler.py  test_message_interpreter.py  test_openai_client.py  test_planning.py  test_repository_cleanup.py  test_task_executor.py  test_time_parser.py
