[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-assistant"
version = "0.1.0"
description = "Telegram-based study schedule assistant MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20,<1.0",
    "apscheduler>=3.10,<4.0",
    "asyncpg>=0.30,<1.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "openai>=1.68.0,<2.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-p no:cacheprovider"
